contains only runs if content is array

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gonzales-pe",
+  "name": "gonzales-pe-sl",
   "description": "Gonzales Preprocessor Edition (fast CSS parser)",
   "version": "4.2.3",
   "homepage": "http://github.com/tonyganch/gonzales-pe",
