--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "url": "http://github.com/tonyganch/gonzales-pe.git"
   },
   "scripts": {
-    "autofix-tests": "bash ./scripts/build.sh && bash ./scripts/autofix-tests.sh",
-    "build": "bash ./scripts/build.sh",
+    "build": "tsc",
+    "test": "jest --verbose --coverage --no-watchman --runInBand",
     "init": "bash ./scripts/init.sh",
-    "lint": "bash ./scripts/lint.sh",
-    "log": "bash ./scripts/log.sh",
+    "lint": "tslint --project .",
+    "lint:fix": "tslint --project . --fix",
     "prepublishOnly": "bash ./scripts/prepublish.sh",
     "postpublish": "bash ./scripts/postpublish.sh",
-    "test": "bash ./scripts/test.sh",
     "watch": "bash ./scripts/watch.sh"
   },
   "bin": {
@@ -33,16 +32,20 @@
     "minimist": "1.1.x"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.1",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
     "coffee-script": "~1.7.1",
     "eslint": "^3.0.0",
+    "jest": "^23.5.0",
     "jscs": "2.1.0",
     "jshint": "2.8.0",
     "json-loader": "^0.5.3",
     "mocha": "2.2.x",
+    "ts-jest": "^23.1.4",
+    "typescript": "^3.0.3",
     "webpack": "^1.12.2",
     "webpack-closure-compiler": "^2.0.2"
   },
